--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 1.0.6+1.19.2
-	maven_group = fryc.hammersandtables
+	mod_version = 1.0.7+1.19.2
+	maven_group = net.fryc
 	archives_base_name = hammersandtables
 
 # Dependencies
