--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.2-SNAPSHOT'
+	id 'fabric-loom' version '1.3-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -30,9 +30,9 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi "me.shedaniel.cloth:cloth-config-fabric:11.0.99"
+	modApi "me.shedaniel.cloth:cloth-config-fabric:12.0.109"
 
-	modApi "com.terraformersmc:modmenu:7.0.1"
+	modApi "com.terraformersmc:modmenu:8.0.0-beta.2"
 
 	modImplementation 'com.github.Xires87:CraftingManipulator:4.0.0'
 
