--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,10 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi "me.shedaniel.cloth:cloth-config-fabric:12.0.109"
+	modApi "me.shedaniel.cloth:cloth-config-fabric:15.0.128"
+	modApi "com.terraformersmc:modmenu:11.0.1"
 
-	modApi "com.terraformersmc:modmenu:8.0.0-beta.2"
-
-	modImplementation 'com.github.Xires87:CraftingManipulator:4.2.0'
+	modImplementation 'com.github.Xires87:CraftingManipulator:5.2.0'
 
 
 
@@ -52,7 +51,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
@@ -61,8 +60,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
