replaced minecraft:empty with random chance condition

--- a/src/main/resources/data/minecraft/loot_table/chests/shipwreck_treasure.json
+++ b/src/main/resources/data/minecraft/loot_table/chests/shipwreck_treasure.json
@@ -5,10 +5,6 @@
       "bonus_rolls": 0.0,
       "entries": [
         {
-          "type": "minecraft:empty",
-          "weight": 16
-        },
-        {
           "type": "minecraft:item",
           "name": "hammersandtables:master_tools",
           "functions": [
@@ -21,7 +17,12 @@
               }
             }
           ],
-          "weight": 1
+          "conditions": [
+            {
+              "chance": 0.06,
+              "condition": "minecraft:random_chance"
+            }
+          ]
         }
       ],
       "rolls": 1.0
