--- a/src/main/resources/data/minecraft/loot_table/chests/buried_treasure.json
+++ b/src/main/resources/data/minecraft/loot_table/chests/buried_treasure.json
@@ -15,10 +15,6 @@
       "bonus_rolls": 0.0,
       "entries": [
         {
-          "type": "minecraft:empty",
-          "weight": 8
-        },
-        {
           "type": "minecraft:item",
           "name": "hammersandtables:master_tools",
           "functions": [
@@ -31,7 +27,12 @@
               }
             }
           ],
-          "weight": 1
+          "conditions": [
+            {
+              "chance": 0.11,
+              "condition": "minecraft:random_chance"
+            }
+          ]
         }
       ],
       "rolls": 1.0
